update: löschen von abteilungen mit mitarbeitern
